Fixing issue where shift-tab doesn't work for tbl components

--- a/AzureFunctions.AngularClient/src/sass/base/_typography.scss
+++ b/AzureFunctions.AngularClient/src/sass/base/_typography.scss
@@ -1,5 +1,6 @@
-a {
-    text-decoration: none;
+a{
+    cursor: pointer;
+    color: $primary-color;
 }
 
 h1, h2, h3, h4{
